<resources>
    <string name="app_name">Food2Go</string>
    <string name="homepage">Home</string>
    <string name="yourOrder">Your Orders</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="password_label">Password:</string>
    <string name="name_label">Name:</string>
    <string name="phone_label">Phone Number:</string>
    <string name="shipping_address">Shipping Address:</string>
    <string name="province">Province:</string>
    <string name="postalCode">Postal Code:</string>
    <string name="log_out">Log out</string>
    <string name="about_us">About us</string>
    <string name="order_history">Order History</string>
    <string name="current_order">Current Order</string>
    <string name="menu">Menu</string>
    <string name="user_avatar">User\'s Avatar</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email_label">Email:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="save">Save</string>
</resources>
