<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/btnAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0091EA"
            android:contentDescription="@string/user_avatar"
            android:hapticFeedbackEnabled="false"
            tools:srcCompat="@tools:sample/avatars" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editProfile"
            android:text="@string/edit_profile" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/first_name_label"
            android:text="@string/first_name" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editFirstName"
            android:inputType="text"
            android:fontFamily="@font/ubuntu"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_label"
            android:text="@string/email_label"
            android:fontFamily="@font/ubuntu"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/ubuntu"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            android:fontFamily="@font/ubuntu"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="@font/ubuntu"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>