<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.5"
    android:background="@drawable/background_delivery"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/street_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#6A000000"
            android:text="@string/shipping_address"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/province_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#6A000000"
            android:text="@string/province"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spinnerProvince"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/black"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:spinnerMode="dropdown"/>

        <TextView
            android:id="@+id/postalCode_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#6A000000"
            android:text="@string/postalCode"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editPostalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="30sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnPlaceOrder"
        style="@style/btnPlaceOrder"></Button>

</RelativeLayout>